--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/logo.svg"/>
+    <link rel="icon" type="image/png" href="/logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Search EPDs</title>
+    <title>Search Table 7 EPDs</title>
     <meta name="author" content="Christian Kongsgaard"/>
     <meta
             name="description"
