--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta
             name="description"
             content="Search, find and compare Environmental Product Declarations across different providers such as Ökobau, ECOplaform and EC3."/>
-    <script async defer data-website-id="d0b03606-a551-4d1f-8976-049c88d24d92"
-            src="https://umami.kongsgaard.eu/umami.js"></script>
+    <script async src="https://umami.kongsgaard.eu/script.js" data-website-id="d0b03606-a551-4d1f-8976-049c88d24d92"></script>
 </head>
 <body>
 <div id="root"></div>
